Made new changes

--- a/HTML_BASIC/css_basic/styles.css
+++ b/HTML_BASIC/css_basic/styles.css
@@ -18,3 +18,15 @@ aside{
     flex:1
     overflow-y: auto
 }
+h1{
+    color: blue;
+    background-color: aqua;
+}
+h2 {
+    color: blueviolet;
+    background-color: aquamarine;
+}
+h3{
+    color: blue;
+    background-color: blanchedalmond;
+}
